# alphyn

./: .gitmodules  CMakeLists.txt  README.md
alphyn/: CMakeLists.txt  alphyn.hpp  bnf.hpp  ct_parser.hpp  default_token.hpp  grammar.hpp  grammar_attributes.hpp  grammar_tools.hpp  lexem_list.hpp  lexer.hpp  lexer_skip.hpp  lexer_syntax.hpp  matcher.hpp  parser.hpp  parser_tools.hpp  white_space_skipper.hpp
cmake/: deps.cmake  flags.cmake
documentation/: bnf.md  doc.md  lexer.md  parser.md
samples/bnf-math-eval/: main.cpp
samples/bnf-meta-parser/: CMakeLists.txt  bnf.hpp  main.cpp
samples/test/: CMakeLists.txt  debug.hpp  main.cpp
samples/tuple-builder/: CMakeLists.txt  main.cpp
